# iisc-android

./: local.properties
app/: CMakeLists.txt  build.gradle
app/include/: compute-mfcc-feats.h  feat-util.h
app/src/main/cpp/: asthma-predict.cpp  compute-mfcc-feats.cpp  feat-util.cpp
app/src/main/java/test1/pantha/registrationform/: MainActivity.java
